<resources>
    <string name="app_name">AgendaP</string>

    <!--MainActivity-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--ActividadRegistro-->
    <string name="CrearCuentaTXT">Crear Cuenta</string>
    <string name="NombreET">Nombres</string>
    <string name="CorreoET">Correo Electronico</string>
    <string name="ConstraseñaET">Constraseña</string>
    <string name="ConfirmarContET">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar Usuario</string>
    <string name="TengoCuentaTXT">Tengo una cuenta!!</string>

    <!--Menu Principal-->
    <string name="CerrarSesion">Salir</string>

    <!--Actividad Login-->
    <string name="IniciarSesionTXT">Iniciar Sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Boton_Login">Ingresar</string>
    <string name="UsuarioNuevoTXT">No tienes una cuenta? Registrate!!</string>

    <!--ActividadMenu-->
    <string name="BienvenidoPrn">Bienvenido(a)</string>
    <string name="NombrePrn"> --- </string>
    <string name="CorreoPrn"> --- </string>
</resources>