<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CrearCuentaTXT"
            android:fontFamily="@font/worksans"
            android:textSize="25sp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="registration.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/NombreET"
                android:hint="@string/NombreET"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:drawableStart="@drawable/icono_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/CorreoET"
                android:hint="@string/CorreoET"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:drawableStart="@drawable/icono_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ConstraseñaET"
                android:hint="@string/ConstraseñaET"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:drawableStart="@drawable/icono_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ConfirmarContET"
                android:hint="@string/ConfirmarContET"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:drawableStart="@drawable/icono_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/RegistrarUsuario"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"
            android:text="@string/RegistrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TengoCuentaTXT"
            android:id="@+id/TengoCuentaTXT"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>