<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="2dp"
            app:cardBackgroundColor="@color/clrPrimary"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans"
                    android:text="@string/BienvenidoPrn"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/PBDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/NombrePrn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans"
                    android:text="@string/NombrePrn"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/CorreoPrn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans"
                    android:text="@string/CorreoPrn"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:visibility="gone" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="40dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/irnotas"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/notas"
                        android:contentDescription="Notas" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nuevas Notas" />

                    <ImageButton
                        android:id="@+id/irtareas"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/calendar"
                        android:contentDescription="Calendario" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Calendario" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/ircontactos"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/contactos"
                        android:contentDescription="Contactos" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Contactos" />

                    <ImageButton
                        android:id="@+id/CerrarSesion"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/cerrarsesion"
                        android:contentDescription="Cerrar sesión" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cerrar Sesión" />
                </LinearLayout>

            </TableRow>

        </TableLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
